# odds-quant

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DATA_IMPORTS.md  DATA_SOURCES.md  DEPLOYMENT.md  LICENSE  METHODOLOGY.md  README.md  RESUME.md  ROADMAP.md  context.md  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4c91e2f7a8b3_walk_forward_evaluation.py  60f015680124_initial_point_in_time_schema.py  8d2f6a1c9e04_value_signal_provenance.py  a13c7e9b4d20_canonicalize_target_competitions.py  b7e31a9d4f62_arbitrage_provenance.py  c3f91a8d2e40_bet_builder_provenance.py  d4e5f6a7b8c9_add_provider_job_metrics.py  e7a4c0d1b292_model_reproducibility_metadata.py  f2b7c8d9e1a0_add_fixture_observations.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: __init__.py  dependencies.py  router.py
backend/app/collectors/: __init__.py  registry.py
backend/tests/: test_api.py  test_arbitrage_math.py  test_arbitrage_service.py  test_backtesting.py  test_bankroll.py  test_builder.py  test_catalog_api.py  test_config.py  test_deployment_config.py  test_dixon_coles.py  test_elo.py  test_evaluation.py  test_evaluation_metrics.py  test_intelligence_import.py  test_intelligence_schemas.py  test_match_suggestion_service.py  test_match_suggestions.py  test_modeling.py  test_odds_api_io.py  test_odds_import.py  test_openfootball.py  test_poisson_model.py  test_results_import.py  test_scheduler.py  test_signal_policy.py  test_signals.py
(+117 files in other folders)
