[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "oddsquant"
version = "0.1.0"
description = "Educational sports odds analytics platform"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.16.5",
  "apscheduler==3.11.0",
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "numpy==2.3.3",
  "pandas==2.3.2",
  "psycopg[binary]==3.2.10",
  "pydantic-settings==2.10.1",
  "python-multipart==0.0.20",
  "scikit-learn==1.7.2",
  "scipy==1.16.2",
  "sqlalchemy==2.0.43",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "mypy==1.17.1",
  "pytest==8.4.2",
  "pytest-cov==6.3.0",
  "ruff==0.13.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic"]

